# PowerPlan

./: .cache.sqlite  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  netlify.toml  pyproject.toml  requirements.txt  results_page.html
.github/workflows/: tests.yml
docker/mysql-init/: 001_schema.sql
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: robots.txt  sitemap.xml
frontend/public/blog/: home-battery-solar-wind-uk-guide.html
frontend/public/collections/: hub.css
frontend/src/: App.jsx  CesiumFlyTo.jsx  CostProjectionView.jsx  InfoIcon.jsx  ResultView.jsx  ScrapeGlobe.jsx  api.js  branding.js  index.css  optimiserConstants.js  optimiserConstants.test.js  pageMeta.js  pageMeta.test.js  postcodeUtils.js  postcodeUtils.test.js  seoHead.js  seoHead.test.js  seoRoutes.js  seoRoutes.test.js  siteOrigin.js
ios/: .gitignore
ios/PowerPlan/PowerPlan/: APIConfiguration.swift  AppViewModel.swift  ContentView.swift  Info.plist  (+13 more)
ios/PowerPlan/PowerPlan.xcodeproj/: project.pbxproj
scripts/: fetch_weather.py
src/: __init__.py  db.py
src/api/: __init__.py  get_weather.py  postcode_lookup.py  reference_export_price.py
src/data/: __init__.py  create_energy_tariff_database.py  create_energy_tariff_database_simple.py  energy_tiers.py
src/models/: .cache.sqlite  __init__.py  energyBalancing.ipynb  energy_balancing.py  tariff_recommendation.py
src/tools/: __init__.py  check_db_connectivity.py
src/web/: __init__.py  app.py  run_scrape.py
tests/: test_energy_tiers.py  test_tariff_recommendation.py
(+18 files in other folders)
