[project]
name = "PowerPlan"
version = "0.1.0"
description = "PowerPlan : A Home Energy System Planning Tool"
authors = [
    { name="Tom Osborne", email="tomosbornee123@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "gunicorn>=22.0",
    "pandas>=2.0",
    "requests>=2.28",
    "requests_cache>=0.9",
    "retry-requests>=0.2",
    "openmeteo-requests>=0.1",
    "mysql-connector-python>=9.5.0",
    "bs4>=0.0.2",
    "urllib3>=2.6.3",
    "pvlib>=0.10",
    "camoufox>=0.4.11",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
